# swell

./: .gitignore  Makefile  README.md  docker-compose.yml  index.html
.claude/skills/deploy-magalucloud-docker/: SKILL.md
.claude/skills/fastapi-mongo-react/: SKILL.MD
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  cart.py  categories.py  products.py
backend/app/api/v1/endpoints/admin/: categories.py  products.py  settings.py
backend/app/core/: config.py  security.py
backend/app/db/: mongodb.py
backend/app/db/repositories/: base.py  cart_repo.py  category_repo.py  product_repo.py  user_repo.py
backend/app/models/: cart_item.py  category.py  product.py  site_settings.py  user.py
backend/app/schemas/: cart.py  category.py  product.py  settings.py  user.py
backend/app/services/: auth_service.py  cart_service.py  category_service.py  product_service.py  settings_service.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_products.py
frontend/: index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  cart.ts  categories.ts  client.ts  products.ts  settings.ts
frontend/src/hooks/: useAuth.ts  useCart.ts  useProducts.ts
frontend/src/pages/: CategoryPage.tsx  ForbiddenPage.tsx  HomePage.tsx  LoginPage.tsx  ProductDetailPage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts  cartStore.ts  (+1 more)
nginx/: nginx.conf
(+39 files in other folders)
