[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swell-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "motor==3.6.0",
    "beanie==1.27.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "pydantic-settings==2.6.1",
    "pydantic[email]==2.10.3",
    "slowapi==0.1.9",
    "python-multipart==0.0.18",
    "secure==0.3.0",
    "Pillow==11.0.0",
    "python-slugify==8.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
